--- a/package.json
+++ b/package.json
@@ -1,37 +1,56 @@
 {
-  "main": "index.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web",
-    "start": "react-native start",
-    "test": "jest"
+    "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~38.0.9",
-    "expo-splash-screen": "^0.5.0",
+    "@eva-design/eva": "^2.0.0",
+    "@react-native-community/blur": "^3.6.0",
+    "@react-native-community/datetimepicker": "2.4.0",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "5.9.2",
+    "@react-native-community/picker": "1.6.0",
+    "@react-navigation/native": "5.5.1",
+    "@react-navigation/stack": "5.5.1",
+    "@storybook/react-native": "^5.3.19",
+    "@ui-kitten/components": "^5.0.0",
+    "expo": "^38.0.0",
+    "expo-asset": "~8.1.7",
+    "expo-constants": "~9.1.1",
+    "expo-font": "~8.2.1",
     "expo-status-bar": "^1.0.0",
-    "expo-updates": "~0.2.8",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "~0.62.2",
+    "firebase": "7.9.0",
+    "formik": "2.1.4",
+    "metro-config": "0.58.0",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
+    "react-hook-form": "^6.4.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-elements": "1.2.7",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-hide-with-keyboard": "1.2.1",
     "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
-    "react-native-unimodules": "~0.10.0",
-    "react-native-web": "~0.11.7"
+    "react-native-svg": "12.1.0",
+    "react-native-ui-lib": "^5.12.4",
+    "react-native-vector-icons": "^7.0.0",
+    "react-native-web": "~0.11.7",
+    "react-native-windows": "^0.62.5",
+    "react-simple-img": "^2.3.9",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
+    "regenerator-runtime": "^0.13.7",
+    "yup": "0.27.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "@types/react": "~16.9.23",
-    "@types/react-dom": "~16.9.8",
-    "@types/react-native": "~0.61.23",
-    "babel-preset-expo": "~8.2.0",
-    "jest-expo": "~38.0.0",
-    "typescript": "~3.9.5"
-  },
-  "jest": {
-    "preset": "react-native"
+    "@babel/core": "^7.9.0",
+    "@babel/runtime": "^7.9.0",
+    "@ui-kitten/metro-config": "^5.0.0",
+    "babel-preset-expo": "^8.2.3"
   },
   "private": true
 }
